Add Kafka integration and exam completion flow
Introduce end-to-end Kafka support and automated course completion processing. Adds KafkaConfig and KafkaTopics, exam/course event records, a consumer (ExamCompletedConsumer) to process exam-completed events, and a publisher (CourseCompletedEventPublisher) to emit course-completed events. Implements ExamScoreCacheService to persist exam results in Redis and updates CompletionCheckService to use cached scores, evaluate completion rules, record CourseCompletionLog (with new TriggerType enum), evict caches, and publish completion events. Repository interfaces extended with helpful query methods. Adds application.yml Kafka settings and docker-compose env vars for topics and auto-create. Includes unit tests for the consumer, publisher, completion logic, and cache service. Error handling, retry/DLT configuration for Kafka listeners, and logging messages were also added/expanded.